--- a/nix/templates/nix/index.html
+++ b/nix/templates/nix/index.html
@@ -45,10 +45,10 @@
 					<tr >
 						<!--Anuncio 1 da linha 1-->
 
-						<td  style=" width:1080px; border:1px solid red" class="anuncio">
+						<td  style=" height:auto; class="anuncio">
 
 
-						<div style="border:3px solid black">
+						<div >
 							<div class="titulo-anuncio">{{anuncio}}</div>
 							
 							<img class="formato-foto" src="{{anuncio.imagem.url}}">
@@ -56,8 +56,8 @@
 							<a href=""><button  > Detalhes do Veiculo</button></a>
 							
 					    </div>
-						<div style="border:1px solid green">
-							<div style="border:1px solid green"> <span style="border:1px solid red" class="autor-anuncio">Anunciante : {{ anuncio.anunciante }} 	</span><span style=" margin: 10px;float:right; margin: 0px; border:1px solid green">Valor: {{anuncio.valor}}</span></div>
+						<div>
+							<div> <span class="autor-anuncio">Anunciante : {{ anuncio.anunciante }} 	</span><span style=" margin: 10px;float:right; margin: 0px; border:1px solid green">Valor: {{anuncio.valor}}</span></div>
 					    </div>
 						</td>
 
@@ -66,10 +66,10 @@
 
 						<!--Anuncio 1 da linha 1-->
 
-						<td  style=" width:1080px; border:1px solid red" class="anuncio">
+						<td class="anuncio">
 
 
-						<div style="border:3px solid black">
+						<div>
 							<div class="titulo-anuncio">{{anuncio}}</div>
 							
 							<img class="formato-foto" src="{{anuncio.imagem.url}}">
@@ -77,8 +77,8 @@
 							<a href=""><button  > Detalhes do Veiculo</button></a>
 							
 					    </div>
-						<div style="border:1px solid green">
-							<div style="border:1px solid green"> <span style="border:1px solid red" class="autor-anuncio">Anunciante : {{ anuncio.anunciante }} 	</span><span style=" margin: 10px;float:right; margin: 0px; border:1px solid green">Valor: {{anuncio.valor}}</span></div>
+						<div>
+							<div> <span style="border:1px solid red" class="autor-anuncio">Anunciante : {{ anuncio.anunciante }} 	</span><span style=" margin: 10px;float:right; margin: 0px; border:1px solid green">Valor: {{anuncio.valor}}</span></div>
 					    </div>
 						</td>
 
@@ -87,10 +87,10 @@
 
 						<!--Anuncio 1 da linha 1-->
 
-						<td  style=" width:1080px; border:1px solid red" class="anuncio">
+						<td class="anuncio">
 
 
-						<div style="border:3px solid black">
+						<div>
 							<div class="titulo-anuncio">{{anuncio}}</div>
 							
 							<img class="formato-foto" src="{{anuncio.imagem.url}}">
@@ -98,8 +98,8 @@
 							<a href=""><button  > Detalhes do Veiculo</button></a>
 							
 					    </div>
-						<div style="border:1px solid green">
-							<div style="border:1px solid green"> <span style="border:1px solid red" class="autor-anuncio">Anunciante : {{ anuncio.anunciante }} 	</span><span style=" margin: 10px;float:right; margin: 0px; border:1px solid green">Valor: {{anuncio.valor}}</span></div>
+						<div>
+							<div> <span class="autor-anuncio">Anunciante : {{ anuncio.anunciante }} 	</span><span style=" margin: 10px;float:right; margin: 0px; border:1px solid green">Valor: {{anuncio.valor}}</span></div>
 					    </div>
 						</td>
 
