--- a/nix/templates/nix/index.html
+++ b/nix/templates/nix/index.html
@@ -12,7 +12,7 @@
 
 
        <!--Container principal-->
-	<div id="main-container">
+	<div id="main">
 		<!--Header-->
 		<div id="header">
 			<!--Menu-->
