--- a/nix/static/css/estilo.css
+++ b/nix/static/css/estilo.css
@@ -12,7 +12,7 @@ body{
 }
 
 #main{
-	width:1080px;	
+	width:1080px;
 	height:2000px;
 	
 }
@@ -73,11 +73,11 @@ a:hover {
 
 
 #col-busca{
-	width: 260px;
-	height:350px;
+	width: 220px;
+	height:400px;
 	background:#f7b600;
 	margin-left: 0px;
-	margin-top: 30px;
+	margin-top: 0px;
 	border-top-right-radius: 40px;
 	border-bottom-right-radius: 40px;
 }
@@ -101,7 +101,7 @@ h3{
 	width: 200px;
 	margin-top: 5px;
 	margin-bottom:10px;	
-	margin-left:20px;
+	margin-left:10px;
 	padding:5px;
 	border-radius: 10px;
 }
@@ -118,14 +118,14 @@ h3{
 /*Formatação area de anuncios*/
 
 .display-anuncios{
-	width:860px;
+	width:980px;
 	height:3000px;
 	display:inline;
 	float: right;
 	margin-top: 10px;
 	background: #CCC;
 	border-radius:40px;
-	
+	border:1px solid red;
 	
 }
 
